Sun May 23 20:38:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: Fixed retain/release loop causing ports occasionally
	to be kept in existence when they should disappear.

Fri May 21 19:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSObject.h: Added NSExtraRefCount()
	* Source/NSObject.m: Added NSExtraRefCount()

Fri May 21 16:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSThread.h: Update notification names to MacOS-X
	with defines for OpenStep compatibility.
	* Source/NSThread.m: Update notification names to MacOS-X
	* Source/externs.m: Update thread notification names to MacOS-X

Fri May 21 16:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSZone.h: Added NSZoneMallocAtomic() for Helge
	and in anticipation of adding garbage collection support some day.

Fri May 21  9:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSObject.h: Bracket macro definitions with #ifndef
	in case they are already defined.

Thu May 20 20:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUserDefaults.m: Don't load defaults unless we need to.
	* Source/include/NSUserDefaults.h: Keep modification timestamp.

Thu May 20 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSeq.h:  Add support for comparison and search.
	* Source/NSString.m:  Use comparison and search functions from GSeq.h
	* Source/NSGString.m:  Use comparison and search functions from GSeq.h
	* Source/NSGCString.m:  Use comparison and search functions from GSeq.h
	* Source/Makefile.postamble: Make all string files depend on GSeq.h
	* Source/NSRunLoop.m: Don't retain receiver of runloop watcher.

Wed May 19 21:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSeq.h:  New file to replace NSGSequence stuff
	* Source/NSString.m:  Rewrite all methods using sequences.